@@ -45,7 +45,7 @@
    This routine returns true on success */
 
 extern int
-get_longjmp_target PARAMS ((CORE_ADDR *));
+get_longjmp_target (CORE_ADDR *);
 
 #define GET_LONGJMP_TARGET(ADDR) get_longjmp_target(ADDR)
 
