@@ -1,3 +1,9 @@
+2002-01-09  Richard Earnshaw  <rearnsha@arm.com>
+
+	* config/arm/arm-tdep.h (arm_software_single_step): Remove PARAMS.
+	* config/arm/nm-nbsd.h (arm_register_u_addr): Likewise.
+	* config/arm/tm-nbsd.h (get_longjmp_target): Likewise.
+
 2002-01-09  Andrew Cagney  <ac131313@redhat.com>
 
 	* MAINTAINERS: Update target maintainer rules so that any
